--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
     <style>
         body{
-            background-image: url(/background.jpg);
+            background-image: url(background.jpg);
         }
     </style>
 <body style="font-family:sans-serif ;color: aliceblue;">
